# fish-term

./: .clang-tidy  .gitignore  AGENTS.md  BUILD.md  README.md  build-profile.json5  run_tests.mjs  test_runner.sh
.bitfun/: configs.json  project.json
.bitfun/.deveco/: project.cache.json
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: featured-packages (1).md  首字符不显示-调查与修复.md
docs/superpowers/plans/: 2026-06-16-wand-term-p0-p1.md  2026-06-16-wand-term-p2.md  2026-06-17-pc-ui-polish.md  2026-06-30-font-dropdown-enhancement-plan.md  2026-06-30-font-selection-plan.md  2026-07-01-font-settings-layout-and-scale-params.md
docs/superpowers/specs/: 2026-06-16-wand-harmony-terminal-design.md  2026-06-17-pc-ui-polish-design.md  2026-06-30-font-dropdown-enhancement-design.md  2026-06-30-font-selection-design.md  2026-07-01-font-settings-layout-and-scale-params-design.md
entry/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/ssh/: ssh_session_stub.cpp
entry/src/main/ets/data/: Changelog.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: ChangelogPage.ets  Index.ets  SettingsPanel.ets
entry/src/main/ets/session/: TerminalSession.ets  TerminalTab.ets
entry/src/main/ets/store/: ConnectionStore.ets
entry/src/main/ets/theme/: FontScale.ets  Palette.ets
entry/src/main/ets/transport/: Backoff.ets  FishUrl.ets  FishWebSocketDriver.ets  TerminalDriver.ets  Utf8Framer.ets  WandUrl.ets  WandWebSocketDriver.ets
entry/src/main/resources/base/element/: string.json
libghostty_ohos/: oh-package.json5
libghostty_ohos/prebuilt/arm64-v8a/: README.md
libghostty_ohos/src/main/cpp/: CMakeLists.txt  napi_init.cpp
libghostty_ohos/src/main/cpp/renderer/: native_drawing_renderer.cpp  native_drawing_renderer.h  renderer.h
libghostty_ohos/src/main/cpp/terminal/: terminal.cpp  terminal.h
libghostty_ohos/src/main/ets/: TerminalController.ets  TerminalSurface.ets  TerminalTypes.ets
tools/: git-init.sh
tools/verify/: _backoff.mjs  _fontscale.mjs  _wandurl.mjs  backoff.test.mjs  fontscale.test.mjs  utf8framer.test.mjs  wandurl.test.mjs
